--- a/web/index.html
+++ b/web/index.html
@@ -12,5 +12,8 @@ and open the template in the editor.
     </head>
     <body>
         <div>TODO write content</div>
+        <form action="CrawlServlet" method="POST">
+            <input type="submit" value="CRAWL"/>
+        </form>
     </body>
 </html>
