--- a/web/index.html
+++ b/web/index.html
@@ -28,6 +28,11 @@
                         <p><a href="register.html">Sign up here</a></p>
                     </div>
                 </form>
+                <div class="form-login">
+                    <form action="CrawlServlet" method="POST">
+                        <input type="submit" value="CRAWL"/>
+                    </form>
+                </div>
             </div>
         </div>
 
