--- a/web/index.html
+++ b/web/index.html
@@ -25,14 +25,12 @@
                     <div class="form-login">
                         <button type="submit">Sign In</button>
                         <br/>
-                        <p><a href="register.html">Sign up here</a></p>
+
                     </div>
+                    <p><a href="register.html">Sign up here</a></p>
+                    <p>   </p>
+                    <p><a href="crawler.html">Craw data here</a></p>
                 </form>
-                <div class="form-login">
-                    <form action="CrawlServlet" method="POST">
-                        <input type="submit" value="CRAWL"/>
-                    </form>
-                </div>
             </div>
         </div>
 
